resolved 'phantom' spacing issues between hero img and about me section'

--- a/scss/_aboutPage.scss
+++ b/scss/_aboutPage.scss
@@ -70,7 +70,7 @@ header {
 @media (min-width: 768px) {
   #about {
     // push about section down from nav bar
-    margin: 12rem 2rem;
+    // margin: 12rem 2rem;
 
     .container {
       //creates 2 column grid layout
